# ADOR_GUI

./: .qmake.stash  BUILD_AND_RUN.md  CMakeLists.txt  COLOR_THEME_GUIDE.md  COMPREHENSIVE_THEMING_GUIDE.md  CROSS_PLATFORM_LAYOUT_FIXES.md  DataStructures.h  Deploy-Windows.ps1  FFTWidget.cpp  FFTWidget.h  LoggingWidget.cpp  LoggingWidget.h  MainWindow.cpp  MainWindow.h  Makefile  Makefile.Debug  Makefile.Release  PPIWidget.cpp  PPIWidget.h  QUICK_START_COLOR_THEME.txt  RANGE_AXIS_UPDATE.md  RANGE_RATE_1SEC_IMPLEMENTATION.md  README.md  README_CUSTOMER.txt  README_FIRST.txt  RadarVisualization.pro  RadarVisualization.pro.user.a38c694  RadarVisualization_resource.rc  SUMMARY_COLOR_THEME_FIX.md  SpeedMeasurementWidget.cpp  SpeedMeasurementWidget.h  TARGET_INDICATORS_SUMMARY.md  THEME_VISUAL_REFERENCE.md  THEMING_ENHANCEMENT_SUMMARY.md  TimeSeriesPlotsWidget.cpp  TimeSeriesPlotsWidget.h  UDP_DATA_FLOW_FIX.md  WINDOWS_DEPLOYMENT.md  deploy_windows.bat  dialogs.cpp  (+12 more)
debug/: moc_FFTWidget.cpp  moc_MainWindow.cpp  moc_PPIWidget.cpp  moc_dialogs.cpp  moc_udphandler.cpp  qrc_qml.cpp
qml/: Main.qml  MainView.qml  main.qml
qml/components/: AmplificationPanel.qml  AngleCorrectionPanel.qml  DialogCard.qml  ModernButton.qml  ModernComboBox.qml  ModernSlider.qml  ModernSpinBox.qml  ModernSwitch.qml  ModernTextField.qml  OutputConfigPanel.qml  PanelCard.qml  SectionHeader.qml  SettingsPopup.qml  StatusIndicator.qml  StyleManager.qml  ThemeManager.qml  UdpConfigPanel.qml  qmldir
qml/dialogs/: ConfigurationDialog.qml  ControlDialog.qml  DiagnosticsDialog.qml  MonitoringDialog.qml  qmldir
qml/style/: Theme.qml  qmldir
resources/: resources.qrc
src/: main.cpp
